wlan_mgt.ht.capabilities bits 8-15 incorrectly decoded (from wrong packet offset)
This issue was migrated from bug 7820 in our old bug tracker.
Original bug information:
Reporter: Mark Phillips
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Windows 7
Platform: x86
Version: 1.8.3
Attachments:
asus_11ac.pcap: Look at the HT capabilities IE (not the VHT one)
bug-7820-part1.patch: Fix for bug
bug-7820-part2.patch: Optional fix to change "Capability" to "Capabilities" to match spec
asus_11ac.pcap: Example packet illustrating the bug