From Mark Phillips via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7820 wlan_mgt.ht.capabilities bits 8-15 incorrectly decoded (from wrong packet offset)

The bug is that the code defines the bit fields as 16 bit, but increments the
offset in-between decoding B0-B7 and B8-B15 which causes the wrong bits to be
decoded.

Also fix to change "Capability" to "Capabilities" to match spec

From me : Fix wrong length for A-MPDU


svn path=/trunk/; revision=45431